# constat

./: .gitignore  .swp  Cargo.toml  README.md
src/: author.rs  cli.yml  file.rs  main.rs  options.rs  plotting.rs  repo.rs  stat.rs
src/analyzer/: mod.rs  patch.rs  repo.rs  tree.rs
