[package]
name = "constat"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10.1"
chrono = "0.4.9"
plotters = {version = "0.2.6", default_features = false, features = ["svg", "datetime", "bitmap"]}
clap = {version = "2.33.0", features = ["yaml"]}
indicatif = "0.12.0"
